[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visionkit_pro"
version = "0.1.1"
description = "Reusable training, evaluation, and Grad-CAM utilities for CSV-backed image classification."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.23",
    "pandas>=1.5",
    "pillow>=9.0",
    "scikit-learn>=1.2",
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.64",
]

[project.scripts]
visionkit = "visionkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
